Issue #14260: The groupindex attribute of regular expression pattern object now is non-modifiable mapping.